<?xml version="1.0" encoding="utf-8"?>
<!--
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNew">

    <TextView
        android:id="@+id/CreateNewReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_task"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <EditText
        android:id="@+id/Date"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/given_date"
        android:inputType="none|date"
        android:textColor="#0C0C0C"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PrioritySpinner"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:id="@+id/Description"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/detailed_description"
        android:inputType="textPersonName"
        android:textColor="#0C0C0C"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />


    <Spinner
        android:id="@+id/PrioritySpinner"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:prompt="@array/priority_type"
        android:spinnerMode="dropdown"
        android:textColor="#0C0C0C"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RName"
        app:layout_constraintVertical_bias="0.055" />

    <ImageButton
        android:id="@+id/Back"
        android:layout_width="79dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="Go Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <Spinner
        android:id="@+id/Type"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_marginTop="188dp"
        android:entries="@array/reminder_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RName"
        android:layout_width="341dp"
        android:layout_height="53dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/receives_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Type"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="171dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="79dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/add_sign"
        android:text="@string/create_new"
        android:textAlignment="center"
        android:drawablePadding="8dp"
        app:background="@color/blue" />



</androidx.constraintlayout.widget.ConstraintLayout>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditTaskActivity">

    <TextView
        android:id="@+id/CreateNewReminder"
        android:layout_width="308dp"
        android:layout_height="75dp"
        android:layout_above="@+id/idEditTaskTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="107dp"
        android:text="@string/create_new_task"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <EditText
        android:id="@+id/idEditTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_above="@+id/idEditTaskDueDate"
        android:layout_margin="10dp"
        android:layout_marginBottom="218dp"
        android:hint="@string/enter_reminder_type"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/idEditTaskDueDate"
        android:layout_width="392dp"
        android:layout_height="57dp"
        android:layout_above="@+id/idEditTaskPriority"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start|top"
        android:hint="@string/enter_task_due_date"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/idEditTaskPriority"
        android:layout_width="390dp"
        android:layout_height="57dp"
        android:layout_above="@+id/idEditTaskDescription"
        android:hint="@string/enter_task_priority"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start|top"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/idEditTaskDescription"
        android:layout_width="391dp"
        android:layout_height="171dp"
        android:layout_above="@id/idBtnAddUpdate"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="51dp"
        android:gravity="start|top"
        android:hint="@string/enter_task_description"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idBtnAddUpdate"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:text="@string/create_new"
        android:textAllCaps="false" />


</RelativeLayout>
